Added title and input which fetch name from user and emit it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="navBar">
   <app-nav></app-nav>
 </div>
-<div class="contentContainer"?>
 
+<div class="contentContainer">
+  <app-content-container></app-content-container>
 </div>
