--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,1 +1,4 @@
-<p>nav works!</p>
+<div class="navBar">
+  {{title}} <input id="name" #nameInput (keyup)="changeName(nameInput.value)" placeholder="your name">
+</div>
+
