--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
 <div class="navBar">
-  {{title}} <input id="name" #nameInput (keyup)="changeName(nameInput.value)" placeholder="your name">
+  Howdy {{name}}, enter your name here: <input id="name" #nameInput (keyup)="changeName(nameInput.value)" placeholder="your name">
 </div>
 
