Added working routing and they are able to display via buttons

--- a/src/app/content-container/content-container.component.html
+++ b/src/app/content-container/content-container.component.html
@@ -1,1 +1,6 @@
 {{nameFromNavBar}}
+
+  <button routerLink="/add-new-offer" routerLinkActive="active">Add new offer</button>
+  <button routerLink="/display-all-offers" routerLinkActive="active"> Display all offers</button>
+
+<router-outlet></router-outlet>
