nothing works xD

--- a/src/app/display-all-offers/display-all-offers.component.html
+++ b/src/app/display-all-offers/display-all-offers.component.html
@@ -1,1 +1,5 @@
-<p>display-all-offers works!</p>
+<!-- <div *ngFor="let offer of offerList">
+  {{offer.name}} {{offer.description}} {{offer.price}}
+</div> -->
+
+dupa
