--- a/src/app/display-all-offers/display-all-offers.component.html
+++ b/src/app/display-all-offers/display-all-offers.component.html
@@ -1,5 +1,4 @@
-<!-- <div *ngFor="let offer of offerList">
+<div *ngFor="let offer of offerList">
   {{offer.name}} {{offer.description}} {{offer.price}}
-</div> -->
+</div>
 
-dupa
